--- a/resources/css/filament-tiptap-editor.css
+++ b/resources/css/filament-tiptap-editor.css
@@ -1,206 +1,229 @@
+@tailwind components;
 @tailwind utilities;
 
 .tiptap-wrapper.tiptap-fullscreen {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    z-index: 500;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 500;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 
-    .tiptap-content {
-        flex: 1 1 0%;
-        overflow-y: scroll;
-        max-height: 100% !important;
+  .tiptap-content {
+    flex: 1 1 0%;
+    overflow-y: scroll;
+    max-height: 100% !important;
 
-        .ProseMirror {
-            max-width: theme("screens.lg");
-            margin-inline: auto;
-        }
+    .ProseMirror {
+      max-width: theme("screens.lg");
+      margin-inline: auto;
     }
+  }
 }
 
 .tiptap-editor .tiptap-toolbar {
-    display: grid;
-    grid-template-columns: 1fr auto;
+  display: grid;
+  grid-template-columns: 1fr auto;
 
-    button.active {
-        background-color: theme("colors.gray.300");
-        color: theme("colors.gray.900");
-    }
+  button.active {
+    background-color: theme("colors.gray.300");
+    color: theme("colors.gray.900");
+  }
 }
 
 .tiptap-editor .ProseMirror {
-    padding: 1rem;
+  padding: 1rem;
 
-    > * + * {
-        margin-block-start: 1rem;
+  > * + * {
+    margin-block-start: 1rem;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-weight: bold;
+  }
+
+  h1 {
+    font-size: 1.75rem;
+    line-height: 1.1;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+    line-height: 1.1;
+  }
+
+  h3 {
+    font-size: 1.25rem;
+    line-height: 1.25;
+  }
+
+  h4 {
+    font-size: 1.125rem;
+  }
+
+  .lead {
+    font-size: 1.375rem;
+    line-height: 1.3;
+  }
+
+  ul,
+  ol {
+    padding-inline-start: 1rem;
+    margin-inline-start: 1rem;
+  }
+
+  ul {
+    list-style: disc;
+  }
+
+  ol {
+    list-style: decimal;
+  }
+
+  ul.checked-list {
+    list-style-type: none;
+    margin-inline-start: 0;
+  }
+
+  ul.checked-list li {
+    display: flex;
+    align-items: center;
+    gap: 0.375em;
+  }
+
+  ul.checked-list li::before {
+    content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="none" viewBox="0 0 24 24" stroke="black" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" /></svg>');
+    width: 1.25rem;
+    height: 1.25rem;
+  }
+
+  blockquote {
+    border-left: 0.5rem solid theme("colors.gray.300");
+    padding-inline-start: 0.5rem;
+    margin-inline-start: 1rem;
+  }
+
+  hr {
+    border-color: theme("colors.gray.300");
+  }
+
+  a {
+    color: theme("colors.blue.600");
+    text-decoration: underline;
+  }
+
+  sup {
+    font-size: 65%;
+  }
+
+  table {
+    border-collapse: collapse;
+    margin: 0;
+    overflow: hidden;
+    table-layout: fixed;
+    width: 100%;
+  }
+
+  table td,
+  table th {
+    border: 2px solid theme("colors.gray.300");
+    box-sizing: border-box;
+    min-width: 1em;
+    padding: 3px 5px;
+    position: relative;
+    vertical-align: top;
+  }
+
+  table td > *,
+  table th > * {
+    margin-bottom: 0;
+  }
+
+  table th {
+    background-color: theme("colors.gray.200");
+    color: theme("colors.gray.700");
+    font-weight: 700;
+    text-align: left;
+  }
+
+  table .selectedCell:after {
+    background: rgba(200, 200, 255, 0.4);
+    content: "";
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    pointer-events: none;
+    position: absolute;
+    z-index: 2;
+  }
+
+  table .column-resize-handle {
+    background-color: #adf;
+    bottom: -2px;
+    position: absolute;
+    right: -2px;
+    pointer-events: none;
+    top: 0;
+    width: 4px;
+  }
+
+  table p {
+    margin: 0;
+  }
+
+  .tableWrapper {
+    padding: 1rem 0;
+    overflow-x: auto;
+  }
+
+  .resize-cursor {
+    cursor: ew-resize;
+    cursor: col-resize;
+  }
+}
+
+.dark {
+  .tiptap-editor .tiptap-toolbar {
+    button.active {
+      background-color: theme("colors.gray.600");
+      color: theme("colors.gray.300");
     }
+  }
 
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-        font-weight: bold;
-    }
-
-    h1 {
-        font-size: 1.75rem;
-        line-height: 1.1;
-    }
-
-    h2 {
-        font-size: 1.5rem;
-        line-height: 1.1;
-    }
-
-    h3 {
-        font-size: 1.25rem;
-        line-height: 1.25;
-    }
-
-    h4 {
-        font-size: 1.125rem;
-    }
-
-    [data-lead="true"] {
-        font-size: 1.375rem;
-    }
-
-    ul,
-    ol {
-        padding-inline-start: 1rem;
-        margin-inline-start: 1rem;
-    }
-
-    ul {
-        list-style: disc;
-    }
-
-    ol {
-        list-style: decimal;
-    }
-
+  .tiptap-editor .ProseMirror {
     blockquote {
-        border-left: 0.5rem solid theme("colors.gray.300");
-        padding-inline-start: 0.5rem;
-        margin-inline-start: 1rem;
+      border-left: 0.5rem solid theme("colors.gray.500");
     }
 
     hr {
-        border-color: theme("colors.gray.300");
+      border-color: theme("colors.gray.500");
     }
 
     a {
-        color: theme("colors.blue.600");
-        text-decoration: underline;
+      color: theme("colors.blue.400");
     }
 
-    sup {
-        font-size: 65%;
-    }
-
-    table {
-        border-collapse: collapse;
-        margin: 0;
-        overflow: hidden;
-        table-layout: fixed;
-        width: 100%;
+    ul.checked-list li::before {
+      content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="none" viewBox="0 0 24 24" stroke="white" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" /></svg>');
     }
 
     table td,
     table th {
-        border: 2px solid theme("colors.gray.300");
-        box-sizing: border-box;
-        min-width: 1em;
-        padding: 3px 5px;
-        position: relative;
-        vertical-align: top;
-    }
-
-    table td > *,
-    table th > * {
-        margin-bottom: 0;
+      border: 2px solid theme("colors.gray.600");
     }
 
     table th {
-        background-color: theme("colors.gray.200");
-        color: theme("colors.gray.700");
-        font-weight: 700;
-        text-align: left;
+      background-color: theme("colors.gray.500");
+      color: theme("colors.gray.900");
     }
-
-    table .selectedCell:after {
-        background: rgba(200, 200, 255, 0.4);
-        content: "";
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        pointer-events: none;
-        position: absolute;
-        z-index: 2;
-    }
-
-    table .column-resize-handle {
-        background-color: #adf;
-        bottom: -2px;
-        position: absolute;
-        right: -2px;
-        pointer-events: none;
-        top: 0;
-        width: 4px;
-    }
-
-    table p {
-        margin: 0;
-    }
-
-    .tableWrapper {
-        padding: 1rem 0;
-        overflow-x: auto;
-    }
-
-    .resize-cursor {
-        cursor: ew-resize;
-        cursor: col-resize;
-    }
-}
-
-.dark {
-    .tiptap-editor .tiptap-toolbar {
-        button.active {
-            background-color: theme("colors.gray.600");
-            color: theme("colors.gray.300");
-        }
-    }
-
-    .tiptap-editor .ProseMirror {
-        blockquote {
-            border-left: 0.5rem solid theme("colors.gray.500");
-        }
-
-        hr {
-            border-color: theme("colors.gray.500");
-        }
-
-        a {
-            color: theme("colors.blue.400");
-        }
-
-        table td,
-        table th {
-            border: 2px solid theme("colors.gray.600");
-        }
-
-        table th {
-            background-color: theme("colors.gray.500");
-            color: theme("colors.gray.900");
-        }
-    }
+  }
 }
