Fixes Tiptap naming conventions

--- a/resources/css/filament-tiptap-editor.css
+++ b/resources/css/filament-tiptap-editor.css
@@ -41,6 +41,15 @@
     margin-block-start: 1rem;
   }
 
+  > * + h1,
+  > * + h2,
+  > * + h3,
+  > * + h4,
+  > * + h5,
+  > * + h6 {
+    margin-block-start: 2rem;
+  }
+
   h1,
   h2,
   h3,
