fix remove color bug, add width and height to images, add source functionality

--- a/resources/css/filament-tiptap-editor.css
+++ b/resources/css/filament-tiptap-editor.css
@@ -368,3 +368,7 @@
     border-top: 1px solid white;
   }
 }
+
+.filament-tiptap-editor-source-modal textarea {
+  font-family: theme("fontFamily.mono");
+}
