--- a/resources/css/filament-tiptap-editor.css
+++ b/resources/css/filament-tiptap-editor.css
@@ -1,4 +1,3 @@
-@tailwind components;
 @tailwind utilities;
 
 .tiptap-wrapper.tiptap-fullscreen {
@@ -33,10 +32,21 @@
   padding: 0;
 }
 
+.tiptap-editor .tiptap-content {
+  display: flex;
+  flex-direction: column;
+}
+
 .tiptap-editor .ProseMirror {
   padding: 1rem;
   border-bottom-left-radius: 0.375rem;
   border-bottom-right-radius: 0.375rem;
+  flex: 1 1 0%;
+  height: 100%;
+
+  &.ProseMirror-focused {
+    outline: none;
+  }
 
   *,
   *::before,
@@ -531,7 +541,7 @@
 
     .filament-tiptap-grid {
       .filament-tiptap-grid__column {
-        border-color: theme("colors.gray.800");
+        border-color: theme("colors.gray.500");
       }
     }
 
@@ -548,7 +558,7 @@
 
     div[data-type="details"] {
       box-sizing: border-box;
-      border-color: theme("colors.gray.800");
+      border-color: theme("colors.gray.500");
       border-radius: theme("borderRadius.DEFAULT");
       position: relative;
 
@@ -562,7 +572,7 @@
         }
 
         summary {
-          border-bottom-color: theme("colors.gray.800");
+          border-bottom-color: theme("colors.gray.500");
         }
       }
     }
