--- a/resources/css/plugin.css
+++ b/resources/css/plugin.css
@@ -1,5 +1,10 @@
 @tailwind utilities;
 
+:root {
+  --tiptap-side-margin: 2rem;
+  --tiptap-max-width: 1024px;
+}
+
 .tiptap-wrapper.tiptap-fullscreen {
   position: fixed;
   top: 0;
@@ -15,11 +20,6 @@
     flex: 1 1 0%;
     overflow-y: scroll;
     max-height: 100% !important;
-
-    .ProseMirror {
-      max-width: theme("screens.lg");
-      margin-inline: auto;
-    }
   }
 }
 
@@ -38,11 +38,27 @@
 }
 
 .tiptap-editor .ProseMirror {
-  padding: 1rem;
   border-bottom-left-radius: 0.375rem;
   border-bottom-right-radius: 0.375rem;
   flex: 1 1 0%;
   height: 100%;
+
+  > * {
+    max-width: var(--tiptap-max-width);
+    margin-inline: auto;
+  }
+
+  .filament-tiptap-hurdle {
+    width: 100%;
+    max-width: 100vw;
+    padding-block: 1rem;
+    background-color: theme('colors.gray.800');
+
+    > * {
+      max-width: var(--tiptap-max-width);
+      margin-inline: auto;
+    }
+  }
 
   &.ProseMirror-focused {
     outline: none;
