--- a/resources/css/plugin.css
+++ b/resources/css/plugin.css
@@ -42,6 +42,7 @@
   border-bottom-right-radius: 0.375rem;
   flex: 1 1 0%;
   height: 100%;
+  padding-block: 1rem;
 
   > * {
     max-width: var(--tiptap-max-width);
@@ -57,6 +58,34 @@
     > * {
       max-width: var(--tiptap-max-width);
       margin-inline: auto;
+    }
+
+    &[data-color="gray_light"] {
+      background-color: theme('colors.gray.300');
+    }
+
+    &[data-color="gray"] {
+      background-color: theme('colors.gray.500');
+    }
+
+    &[data-color="gray_dark"] {
+      background-color: theme('colors.gray.800');
+    }
+
+    &[data-color="primary"] {
+      background-color: theme('colors.primary.500');
+    }
+
+    &[data-color="secondary"] {
+      background-color: theme('colors.warning.500');
+    }
+
+    &[data-color="tertiray"] {
+      background-color: theme('colors.success.500');
+    }
+
+    &[data-color="accent"] {
+      background-color: theme('colors.danger.500');
     }
   }
 
