--- a/resources/css/plugin.css
+++ b/resources/css/plugin.css
@@ -45,8 +45,9 @@
 .tiptap-editor .ProseMirror {
     border-bottom-left-radius: 0.375rem;
     border-bottom-right-radius: 0.375rem;
-    flex: 1 1 0%;
+    flex: 1 1 0;
     padding-block: 1rem;
+    padding-inline: var(--tiptap-side-margin);
     max-width: var(--tiptap-max-width);
     margin-inline: auto;
     position: relative;
