Fix: empty state width for focusing field

--- a/resources/css/plugin.css
+++ b/resources/css/plugin.css
@@ -51,6 +51,7 @@
     max-width: var(--tiptap-max-width);
     margin-inline: auto;
     position: relative;
+    width: 100%;
 
     .filament-tiptap-hurdle {
         width: 100%;
