--- a/resources/css/plugin.css
+++ b/resources/css/plugin.css
@@ -15,6 +15,10 @@
         border-radius: 0;
     }
 
+    .tiptap-prosemirror-wrapper {
+        max-height: 100%;
+    }
+
     .tiptap-content {
         flex: 1 1 0;
         overflow-y: scroll;
