--- a/resources/css/plugin.css
+++ b/resources/css/plugin.css
@@ -287,6 +287,10 @@
         text-align: left;
     }
 
+    table .selectedCell {
+        position: relative;
+    }
+
     table .selectedCell:after {
         background: rgba(200, 200, 255, 0.4);
         content: "";
