--- a/resources/css/plugin.css
+++ b/resources/css/plugin.css
@@ -393,6 +393,11 @@
         padding: .75rem 1rem;
         border-radius: .25rem;
         font-size: .875rem;
+
+        code {
+            border-radius: 0;
+            padding-inline: 0;
+        }
     }
 
     code {
