Fix: source code modal height

--- a/resources/css/plugin.css
+++ b/resources/css/plugin.css
@@ -14,7 +14,7 @@
                     height: 100%;
                     grid-template-rows: auto 1fr;
 
-                    textarea {
+                    .source_code_editor * {
                         height: 100% !important;
                     }
                 }
